log
Mon 06 May 2024 11:15:17 PM UTC: 
 tests:  1|8
total_score: 0/70
cc7f8d3
Wed 08 May 2024 05:53:20 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:17: error: statement with no effect [-Werror=unused-value]
   41 |     nuevo->root == NULL;
      |                 ^
treemap.c:42:20: error: statement with no effect [-Werror=unused-value]
   42 |     nuevo->current == NULL;
      |                    ^
treemap.c:41:10: error: ‘*nuevo.root’ is used uninitialized [-Werror=uninitialized]
   41 |     nuevo->root == NULL;
      |     ~~~~~^~~~~~
treemap.c:42:10: error: ‘*nuevo.current’ is used uninitialized [-Werror=uninitialized]
   42 |     nuevo->current == NULL;
      |     ~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cd2a15d
